@@ -7,6 +7,9 @@
 {block name="customereditbox"}
 	{include file="customer/customereditbox.html"}
 {/block}
+{block name="customernotes"}
+	{include file="customer/customernotes.html" limit=10}
+{/block}
 {block name="customernodesbox"}
 	{include file="customer/customernodesbox.html"}
 {/block}
