@@ -14,6 +14,9 @@
 {block name="customerinfobox"}
 	{include file="customer/customerinfobox.html"}
 {/block}
+{block name="customernotes"}
+	{include file="customer/customernotes.html" limit=10}
+{/block}
 {block name="customernodesbox"}
 	{include file="customer/customernodesbox.html"}
 {/block}
