@@ -94,6 +94,7 @@ version 26-git (????-??-??):
   - improvement: converted customer group selection in customer search form to multiple
     selection [chilan]
   - enhancement: added the ability to copy user divisions between users [ravvar]
+  - enhancement: customer notes support in dedicated tab [chilan]
 
 version 25.0 (2020-05-15):
 
